...
                        Image(systemName: sort.image)
                        Text(sort.rawValue.capitalized)
                    }
                }
            }
        } label: {
            Label("Sort", systemImage: currentSort.image)
                .labelStyle(.iconOnly)
        }
    }
}

enum SortType {
...
